--- a/server/export/desktop/package.json
+++ b/server/export/desktop/package.json
@@ -1,19 +1,12 @@
 {
-  "name": "[PKGNAME]",
-  "version": "[PKGVERSION]",
-  "main": "index.html", 
-  "window": {
-      "id": "[PKGID]", 
-	  "title": "[PKGNAME]", 
-	  "icon": "favicon.png",
-	  "width": [PKGWIDTH], 
-	  "height": [PKGHEIGHT], 
-	  "position": "center", 
-	  "kiosk": [PKGKIOSK], 
-      "resizable": [PKGRESIZABLE], 
-      "fullscreen": [PKGFULLSCREEN]
-  }, 
-  "icons": {
-	  "256": "favicon.png"
-  }
+  "name": "[TITLE]",
+  "version": "1.0.0",
+  "main": "main.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1", 
+	"start": "electron ."
+  },
+  "author": "[AUTHOR]",
+  "license": "",
+  "description": "[DESCRIPTION]"
 }
