--- a/server/export/mobile/capacitor.config.json
+++ b/server/export/mobile/capacitor.config.json
@@ -1,5 +1,5 @@
 {
-  "appId": "[APPID]",
+  "appId": "tilbuci.[APPID]",
   "appName": "[APPNAME]",
   "webDir": "www", 
   "bundledWebRuntime": false
