--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,28 @@
-# dreamweaver notes #
 _notes
+third/
+models/
+setup/*.zip
+setup/*.xz
+setup/*.dmg
+app/Export/
+server/public_html/app/editor.json
+server/public_html/app/player.json
+server/app/Config.php
+server/public_html/movie/*
+!server/public_html/movie/movie.txt
+server/public_html/font/*
+!server/public_html/font/averiaserifgwf.woff2
+!server/public_html/font/liberationserif.woff2
+!server/public_html/font/librasans.woff2
+!server/public_html/font/roboto.woff2
+server/public_html/site
+server/public_html/sites
+server/public_html/pwa
+server/export/*
+!server/export/desktop/
+!server/export/iframe/
+!server/export/mobile/
+!server/export/publish/
+!server/export/pwa/
+!server/export/runtimes/
+!server/export/site/
